# SlamTester

./: .gitignore  CMakeLists.txt  DataSets.cpp  DataSets.h  ImageAndExposure.h  MinimalImage.h  PangolinViewer.cpp  PangolinViewer.h  SlamInterface.cpp  SlamInterface.h  TumRs_Pangolin_Example.cpp  TumRs_Pangolin_Example.h  TumRs_VinsMono.cpp  TumRs_VinsMono.h  Undistort.cpp  Undistort.h  build.sh  main.cpp  run_example.sh  ubuntu_build.sh
algorithms/: Pangolin_Algo_Example.cpp  Pangolin_Algo_Example.h
algorithms/dso/: CMakeLists.txt  DsoAlgorithm.cpp  DsoAlgorithm.h
algorithms/dso/src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  ImmaturePoint.cpp
algorithms/dso/src/util/: settings.cpp
algorithms/modify-vins-mono/: CMakeLists.txt  VinsMono.cpp  VinsMono.h
algorithms/modify-vins-mono/camera_model/: CMakeLists.txt
algorithms/modify-vins-mono/feature_tracker/: CMakeLists.txt
algorithms/modify-vins-mono/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h
algorithms/modify-vins-mono/vins_estimator/src/: estimator.cpp
algorithms/modify-vins-mono/vins_estimator/src/initial/: initial_alignment.h  solve_5pts.h
algorithms/modify-vins-mono/vins_estimator/src/utility/: perf_monitor.h
algorithms/vins_mono/: CMakeLists.txt  VinsAlgorithm.cpp  VinsAlgorithm.h  system.cpp  system.h
algorithms/vins_mono/camera_model/: CMakeLists.txt
algorithms/vins_mono/feature_tracker/: CMakeLists.txt
algorithms/vins_mono/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h
algorithms/vins_mono/vins_estimator/: CMakeLists.txt
algorithms/vins_mono/vins_estimator/src/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
algorithms/vins_mono/vins_estimator/src/factor/: imu_factor.h  integration_base.h
algorithms/vins_mono/vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h
algorithms/vins_mono/vins_estimator/src/utility/: utility.h
ldd_copy/: libapr-1.so.0  libaprutil-1.so.0  libceres.so.1  libconsole_bridge.so.0.4  libcxsparse.so.3  libgflags.so.2.2  libglog.so.1  libgssapi.so.3  liblog4cxx.so.10  libmetis.so.5  libpq.so.5  libprotobuf.so.32  libsioclient.so.1  libspqr.so.2  libyaml-cpp.so.0.7
modify-vins-mono/: CMakeLists.txt  Euroc_VinsMono.cpp  Euroc_VinsMono.h  TumRs_VinsMono.cpp  TumRs_VinsMono.h
modify-vins-mono/camera_model/: CMakeLists.txt
modify-vins-mono/feature_tracker/: CMakeLists.txt
modify-vins-mono/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h
modify-vins-mono/vins_estimator/: CMakeLists.txt
modify-vins-mono/vins_estimator/src/: estimator.cpp  estimator.h
modify-vins-mono/vins_estimator/src/utility/: perf_monitor.cpp
ros_wrap/: CMakeLists.txt  ros_wrap_vins.cpp  run_ros_vins.sh
rosbag/: CMakeLists.txt
rosbag/src/RosbagStorage/: bag.cpp
rosbag/src/rostime/: time.cpp
socket_publisher/: CMakeLists.txt  config.yaml  data_serializer.cc  data_serializer.h  publisher.cc  publisher.h  socket_client.cc  socket_client.h
viewer/: package-lock.json  readme.txt
